--- a/VTS_DropDanMuSC/VTS_DropDanMuSC.csproj
+++ b/VTS_DropDanMuSC/VTS_DropDanMuSC.csproj
@@ -33,28 +33,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-nstrip">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\RefDll\Assembly-CSharp-nstrip.dll</HintPath>
+      <HintPath>..\RefDll\Assembly-CSharp-nstrip.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\BepInEx.Core.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\BepInEx.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Unity">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\BepInEx.Unity.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\BepInEx.Unity.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="LeanPool">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\RefDll\LeanPool.dll</HintPath>
+      <HintPath>..\RefDll\LeanPool.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\Newtonsoft.Json.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -66,31 +66,31 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.AssetBundleModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.AssetBundleModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.Physics2DModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.Physics2DModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.Physics2DModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.UI.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.UI.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.UIModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.UIModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.UIModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
