--- a/VTS_PressingMotionPlayer/VTS_PressingMotionPlayer.csproj
+++ b/VTS_PressingMotionPlayer/VTS_PressingMotionPlayer.csproj
@@ -33,24 +33,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\0Harmony.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp-nstrip">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\RefDll\Assembly-CSharp-nstrip.dll</HintPath>
+      <HintPath>..\RefDll\Assembly-CSharp-nstrip.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Core">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\BepInEx.Core.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\BepInEx.Core.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx.Unity">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\BepInEx\core\BepInEx.Unity.dll</HintPath>
+      <HintPath>$(VTSPath)\BepInEx\core\BepInEx.Unity.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\Newtonsoft.Json.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\Newtonsoft.Json.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -62,15 +62,15 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.AnimationModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\Program Files (x86)\Steam\steamapps\common\VTube Studio\VTube Studio_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>$(VTSPath)\VTube Studio_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
