--- a/VTS_XYPlugin_Common/VTS_XYPlugin_Common.csproj
+++ b/VTS_XYPlugin_Common/VTS_XYPlugin_Common.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\Program Files %28x86%29\Steam\steamapps\common\VTube Studio\BepInEx\plugins\VTS_XYPlugin\</OutputPath>
+    <OutputPath>$(VTSPath)\BepInEx\plugins\VTS_XYPlugin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -84,6 +84,7 @@
     <Compile Include="Config\XYModelConfig.cs" />
     <Compile Include="Cache\XYPluginCache.cs" />
     <Compile Include="DropItemData.cs" />
+    <Compile Include="Enum\BilibiliDanmakuSource.cs" />
     <Compile Include="Enum\CollisionType.cs" />
     <Compile Include="Enum\ImageType.cs" />
     <Compile Include="GiftTriggerActionData.cs" />
