--- a/VTS_XYPlugin/packages.config
+++ b/VTS_XYPlugin/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MoonSharp" version="2.0.0.0" targetFramework="net472" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="Websocket.Client" version="4.7.0" targetFramework="net472" />
 </packages>
